--- a/src/assets/examples/select-overview/select-overview.component.css
+++ b/src/assets/examples/select-overview/select-overview.component.css
@@ -7,3 +7,18 @@ h4 {
   text-align: left;
   margin: 0 auto;
 }
+
+.example-title {
+  height: 24px;
+  width: 124px;
+  color: #000000;
+  font-family: 'Soleto Trial';
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  margin-bottom: 16px;
+}
+
+.mat-form-field {
+  margin-bottom: 36px;
+}
